--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,16 +1,26 @@
-<%- include('header.ejs') %>
+<%- include('header') %>
 
 <div class="container">
 
-
+     
     <h1><%= title %></h1>
 
-    <h1><a href="/profile">Profile
-    </a></h1>
-    <a href="/transfer">Transfer</a>
-        
+    <a href="/profile">Profile
+    </a>
+
+
+    
 
 </div>
 
+<%- include('summary',{account:accounts.savings});    %>
+<%- include('summary',{account:accounts.checking});    %>
+<%- include('summary',{account:accounts.credit});    %>
 
-<%- include('footer.ejs') %>
+    <a href="/transfer">Transfer</a>
+        
+
+
+
+
+<%- include('footer') %>
