--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,7 +17,7 @@
 <%- include('summary',{account:accounts.checking});    %>
 <%- include('summary',{account:accounts.credit});    %>
 
-    <a href="/transfer">Transfer</a>
+    <a href="/services/transfer">Transfer</a>
         
 
 
